bynkc/tests/fixtures/negative/121_service_unknown_protocol/src/svc.karn
context svc

service api from kafka {
  on message(m: String) -> Effect[QueueResult] {
    Ack
  }
}
